# contoso_python

./: db.sqlite3  pyproject.toml
contoso_django/: db.sqlite3  manage.py  settings.py  urls.py  wsgi.py
contoso_django/contoso_django/: asgi.py  settings.py  urls.py
contoso_django/department/: models.py
contoso_django/department/migrations/: 0001_initial.py
contoso_django/enrollment/migrations/: 0001_initial.py
contoso_django/person/: models.py
contoso_django/person/migrations/: 0002_officeassignment.py
course/: models.py  serializers.py  views.py
course/migrations/: 0001_initial.py
department/: models.py  serializers.py  views.py
department/migrations/: 0001_initial.py
enrollment/: models.py  serializers.py  views.py
enrollment/migrations/: 0001_initial.py
person/: models.py  serializers.py  views.py
person/migrations/: 0001_initial.py
